--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.1",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-image-to-text-ocr",
+	"version": "1.0.0",
+	"description": "Convert a image in your note to text",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"test": "vitest",
+		"lint": "npx eslint",
+		"prettier": "npx prettier .",
+		"coverage": "vitest run --coverage"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Dario Baumberger",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
@@ -20,5 +24,8 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"tesseract.js": "^5.0.4"
 	}
 }
