--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-image-to-text-ocr",
+	"id": "image-to-text-ocr",
 	"name": "Image to Text OCR",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
