--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-image-to-text-ocr",
-	"version": "1.0.0",
+	"version": "0.0.1",
 	"description": "Convert a image in your note to text",
 	"main": "main.js",
 	"scripts": {
@@ -16,16 +16,15 @@
 	"author": "Dario Baumberger",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@types/node": "^20.11.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	},
-	"dependencies": {
-		"tesseract.js": "^5.0.4"
+		"typescript": "4.7.4",
+		"tesseract.js": "^5.0.4",
+		"vitest": "^1.2.2"
 	}
 }
