--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
 		"@types/node": "^20.11.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"@vitest/coverage-v8": "^1.2.2",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
+		"tesseract.js": "^5.0.4",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
-		"tesseract.js": "^5.0.4",
 		"vitest": "^1.2.2"
 	}
 }
