--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"id": "image-to-text-ocr",
-	"name": "Image to Text OCR",
+	"name": "Image to text OCR",
 	"version": "1.0.1",
 	"minAppVersion": "0.15.0",
 	"description": "Convert a image in your note to text.",
