--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"test": "vitest",
 		"lint": "npx eslint",
-		"prettier": "npx prettier .",
+		"prettier": "npx prettier . --write",
 		"coverage": "vitest run --coverage"
 	},
 	"keywords": [],
