--- a/.gitignore
+++ b/.gitignore
@@ -20,23 +20,6 @@ data.json
 
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
-coverage/base.css
-coverage/block-navigation.js
-coverage/clover.xml
-coverage/coverage-final.json
-coverage/favicon.png
-coverage/index.html
-coverage/prettify.css
-coverage/prettify.js
-coverage/sort-arrow-sprite.png
-coverage/sorter.js
-coverage/obsidian-image-to-text-ocr/esbuild.config.mjs.html
-coverage/obsidian-image-to-text-ocr/index.html
-coverage/obsidian-image-to-text-ocr/main.js.html
-coverage/obsidian-image-to-text-ocr/version-bump.mjs.html
-coverage/obsidian-image-to-text-ocr/src/functions.ts.html
-coverage/obsidian-image-to-text-ocr/src/index.html
-coverage/obsidian-image-to-text-ocr/src/languages.ts.html
-coverage/obsidian-image-to-text-ocr/src/main.ts.html
-coverage/obsidian-image-to-text-ocr/src/modal.ts.html
-coverage/obsidian-image-to-text-ocr/src/settings.ts.html
+
+# exlude coverage
+coverage/
