--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-image-to-text-ocr",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "Convert a image in your note to text",
 	"main": "main.js",
 	"scripts": {
@@ -16,14 +16,15 @@
 	"author": "Dario Baumberger",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^20.11.0",
+		"@types/node": "^20.16.2",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
-		"@vitest/coverage-v8": "^1.2.2",
+		"@vitest/coverage-v8": "^1.6.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"tesseract.js": "^5.0.4",
+		"obsidian": "^1.6.6",
+		"prettier": "^3.3.3",
+		"tesseract.js": "^5.1.1",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
 		"vitest": "^1.2.2"
